// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConjInfoCard component displays a regular conjugation 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 5,
      "marginHorizontal": undefined,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 5,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
          },
          Object {
            "minHeight": 72,
          },
          Object {
            "marginTop": -8,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Array [
                    Object {
                      "minHeight": 30,
                    },
                    Object {
                      "marginBottom": 2,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontSize": undefined,
                      "textTransform": "capitalize",
                    },
                  ],
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Array [
                    Object {
                      "minHeight": 30,
                    },
                    Object {
                      "marginBottom": 2,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontSize": undefined,
                      "textTransform": "capitalize",
                    },
                  ],
                ],
              ],
            ]
          }
        >
          name
        </Text>
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-end",
              "backgroundColor": "#03dac4",
              "borderRadius": 15,
              "color": "#000000",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "height": 30,
              "lineHeight": 30,
              "marginRight": undefined,
              "minWidth": 30,
              "opacity": 0,
              "overflow": "hidden",
              "paddingHorizontal": undefined,
              "textAlign": "center",
              "textAlignVertical": "center",
            }
          }
        >
          Honorific
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 16,
          },
          Object {
            "paddingBottom": 16,
          },
          Object {
            "paddingHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": undefined,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "fontSize": 24,
                "marginTop": -16,
              },
            ]
          }
        >
          conj
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
              ],
            ]
          }
        >
          Pronunciation
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          pronunciation
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "color": "#808080",
                "fontSize": 18,
              },
            ]
          }
        >
          romanization
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
              ],
            ]
          }
        >
          Explanation
        </Text>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 1 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 2 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 3 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ConjInfoCard component displays an honorific conjugation 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 5,
      "marginHorizontal": undefined,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 5,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
          },
          Object {
            "minHeight": 72,
          },
          Object {
            "marginTop": -8,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Array [
                    Object {
                      "minHeight": 30,
                    },
                    Object {
                      "marginBottom": 2,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontSize": undefined,
                      "textTransform": "capitalize",
                    },
                  ],
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Array [
                    Object {
                      "minHeight": 30,
                    },
                    Object {
                      "marginBottom": 2,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontSize": undefined,
                      "textTransform": "capitalize",
                    },
                  ],
                ],
              ],
            ]
          }
        >
          name
        </Text>
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "flex-end",
              "backgroundColor": "#03dac4",
              "borderRadius": 15,
              "color": "#000000",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "height": 30,
              "lineHeight": 30,
              "marginRight": undefined,
              "minWidth": 30,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": undefined,
              "textAlign": "center",
              "textAlignVertical": "center",
            }
          }
        >
          Honorific
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 16,
          },
          Object {
            "paddingBottom": 16,
          },
          Object {
            "paddingHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": undefined,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "fontSize": 24,
                "marginTop": -16,
              },
            ]
          }
        >
          conj
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
              ],
            ]
          }
        >
          Pronunciation
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          pronunciation
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Object {
                "color": "#808080",
                "fontSize": 18,
              },
            ]
          }
        >
          romanization
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "#6200ee",
                    "fontSize": 18,
                    "marginBottom": undefined,
                    "marginTop": 16,
                  },
                ],
              ],
            ]
          }
        >
          Explanation
        </Text>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 1 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 2 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": undefined,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            reason 3 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Object {
                  "color": "#808080",
                  "fontSize": 18,
                },
              ]
            }
          >
            (details)
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
